# SuperBomberElf

./: .gitignore  Dockerfile  README.md  docker-compose.yml
client/: .dir-locals.el  .gitignore  Makefile  Shake.hs  elm-package.json  package.json
client/src/: App.elm  State.elm  Types.elm  View.elm  WebSocket.elm
client/src/View/: Bomb.elm  Player.elm  Scene.elm  Utils.elm
client/static/styles/: main.less
server/: .gitignore  bomberman.cabal  bomberman.docker.yaml  bomberman.sample.yaml  log.txt  stack.yaml
server/src/: AesonUtils.hs  Client.hs  Config.hs  Engine.hs  EventRules.hs  EventSystem.hs  Events.hs  Levels.hs  Lib.hs  Render.hs  Rest.hs  Types.hs  Utils.hs
server/test/: EventRulesSpec.hs  EventSystemSpec.hs  EventsSpec.hs  LibSpec.hs  Spec.hs  TypesSpec.hs
server/test/Test/: Types.hs
