name:                bomberman
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/krisajenkins/bomberman#readme
license:             BSD3
--license-file:        LICENSE
author:              Kris Jenkins
maintainer:          krisajenkins@gmail.com
copyright:           2015 Kris Jenkins
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Config
                     , Engine
                     , Events
                     , Types
                     , Levels
                     , Rest
                     , Render
                     , Utils
  other-modules:       AesonUtils
  build-depends:       aeson
                     , async
                     , base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , directory
                     , ekg
                     , lens
                     , mtl
                     , network
                     , random
                     , safe
                     , formatting
                     , servant-server
                     , stm
                     , text
                     , time
                     , transformers
                     , uuid
                     , vector
                     , wai
                     , wai-websockets
                     , warp
                     , websockets
                     , yaml
  default-language:    Haskell2010

executable bomberman
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bomberman
                     , aeson
                     , async
                     , bytestring
                     , containers
                     , random
                     , uuid
                     , lens
                     , mtl
                     , network
                     , stm
                     , text
                     , time
                     , websockets
  default-language:    Haskell2010

test-suite bomberman-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       TypesSpec
                     , LibSpec
                     , EventsSpec
  build-depends:       base
                     , bomberman
                     , aeson
                     , async
                     , bytestring
                     , containers
                     , random
                     , uuid
                     , lens
                     , mtl
                     , hspec
                     , hspec-core
                     , QuickCheck
                     , quickcheck-instances
                     , network
                     , stm
                     , stm
                     , text
                     , time
                     , websockets
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/krisajenkins/bomberman
